contact issue definitely fixed on ie

--- a/resources/assets/sass/component/iefix.scss
+++ b/resources/assets/sass/component/iefix.scss
@@ -13,3 +13,7 @@
 .ie-flex40{
 	flex-basis: 40% !important;
 }
+
+.ie-spacearound{
+	justify-content: space-around !important;
+}
